--- a/styles.css
+++ b/styles.css
@@ -20,23 +20,24 @@ body {
     display: flex;
     color: #F9FAF8;
     justify-content: space-between;
-    margin-top: 16px;
+    align-items: center;
+    margin-top: 4px;
     flex: 1 1 0;
 }
 
-.header-links {
+
+.link {
     display: flex;
+    color: #d3d5d8;
     text-decoration: none;
-    color: #E5E7EB;
-    gap: 16px;
 }
 
 .intro {
     height: 200px;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex: auto;
+    margin-top: 75px;
 }
 
 .web-description {
@@ -58,11 +59,50 @@ body {
     flex: 1 1 50%;
 }
 
-.secondary {
-    color: #E5E7EB;
-}
-
 .signup {
+    width: fit-content;
     background-color: #3882F6;
     color: #F9FAF8;
+    padding: 10px 30px 10px 30px;
+    border: 0px;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.secondary, .header-links {
+    font-size: 18px;
+    color: #d3d5d8;
+}
+
+.main {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-header {
+    margin: 50px;
+}
+
+.boxes {
+    display: flex;
+    gap: 50px;
+}
+
+.box-capsule {
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.box {
+    width: 150px;
+    height: 150px;
+    border: 4px solid #3882F6;
+    border-radius: 15px;
+    margin-bottom: 10px;
 }
